--- a/SnakeWorld Highscore Web/style/default.css
+++ b/SnakeWorld Highscore Web/style/default.css
@@ -1,4 +1,10 @@
 ﻿body{padding:0;margin:0;}
-a:hover{color:#000000;}
+a{color:#244d87;font-size:16px;}
+a:hover{color:#ff0000;}
+
 td.sort{background:url(sortArrow.gif) 100% 50% no-repeat;}
-td.sort a{text-decoration:none;}
+td.sort a{text-decoration:none;color:#ffffff;}
+
+.period{padding:0 0 0 24px;}
+.period a{margin:0 18px 0 18px;}
+.period .c a{color:#ffffff;text-decoration:none;}
