--- a/SnakeWorld Highscore Web/style/box.css
+++ b/SnakeWorld Highscore Web/style/box.css
@@ -9,7 +9,7 @@
 .rndboxtop .br {background-image: url(box/br.gif);background-position:bottom right;background-repeat:no-repeat;}
 .rndboxtop .tl {background-image: url(box/tl.gif);background-position:top left;background-repeat:no-repeat;}
 .rndboxtop .tr {background-image: url(box/tr.gif);background-position:top right;background-repeat:no-repeat; padding:6px 6px 0 6px;}
-.rndboxtop .rndboxend {display:block;height:6px;clear:both;float:none;}/*fix wrong padding manipulation on some browsers (insted of .tr{padding-bottom:2px;})*/
+/*.rndboxtop .rndboxend {display:block;height:6px;clear:both;float:none;}*//*fix wrong padding manipulation on some browsers (insted of .tr{padding-bottom:2px;})*/
 
 .topjoin .tl {background-image: url(box/tbl.gif);}
 .topjoin .tr {background-image: url(box/tbr.gif); padding:6px 6px 0 6px;}
