--- a/SnakeWorld Highscore Web/style/default.css
+++ b/SnakeWorld Highscore Web/style/default.css
@@ -1,4 +1,4 @@
-﻿body{padding:0;margin:0;font-size:10px;color:#202020;}
+﻿body{padding:0;margin:0;font-size:12px;color:#202020;}
 a{color:#244d87;font-size:14px;}
 a:hover{color:#ff0000;}
 form{padding:0;margin:0;}
@@ -15,4 +15,4 @@ td.sort a{text-decoration:none;color:#ffffff;}
 .pager a,.pager span{padding:4px;}
 
 .bottomLink{text-align:center;font-size:10px;}
-.bottomLink a,.bottomLink a:visited{text-decoration:underline;color:#0000ff;}
+.bottomLink a,.bottomLink a:visited{font-size:11px;text-decoration:underline;color:#0000ff;}
